--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
 										<div><span uk-icon="icon: windows; ratio: 1.5"></span></div>
-										<div class="uk-margin-small-top uk-text-break"><h4>January 2018 - June 2018</h4></div>
+										<div class="uk-margin-small-top uk-text-break"><h4>January 2018 - July 2018</h4></div>
 										<span class="uk-padding-small-top uk-position-top-right-out" uk-icon="icon: circle; ratio: 0.7" style="z-index: 1; padding-top: 10px; padding-left: 9px;"></span>
 										<ul class="uk-hidden@s uk-iconnav uk-flex-right uk-margin-remove-left">
 											<li><a href="" uk-icon="icon: ; ratio: 1.25" target="_blank"></a></li>
@@ -304,27 +304,29 @@
 																</span>
 															</h3>
 														</div>
-														<ul class="uk-visible@s uk-iconnav uk-width-auto uk-margin-remove-left uk-background-default uk-flex-middle">
-
-								</ul> 
+														<!--<ul class="uk-visible@s uk-iconnav uk-width-auto uk-margin-remove-left uk-background-default uk-flex-middle">
+									<li><a href="https://play.google.com/store/apps/details?id=com.WhatWapp.BurracoOnline" uk-icon="icon: google-play; ratio: 1.25" target="_blank"></a></li>
+									<li><a href="https://apps.apple.com/it/app/burraco-italiano-la-sfida/id1019117289" uk-icon="icon: app-store; ratio: 1.25" target="_blank"></a></li>
+								</ul> -->
 													</div>
 													<div><h4 class="uk-text-capitalize uk-text-italic">Game Developer</h4></div>
-													<div class="uk-margin-small-top" style="margin-right: 1px" >
-														This project was one of the first projects I did within Unity and it was in collaboration with a fellow programmer, Ashley Flynn. 
+													<div class="uk-margin-small-top" style="margin-right: 1px">
+														This project was one of the first projects I did within Unity and it was in collaboration with a fellow programmer, Ashley Flynn.
 														Our task was to create a game that was fun and enjoyable, as well as having it be compatible with over 3 platforms. We were able to make this game compatible with PC, iOS, Android, Tizen, WebGL, and Windows Phone.
-														xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-														<div class="uk-margin-small-top uk-text-left uk-grid-column-small" uk-grid>
-															<div class="uk-width-auto">
-																<a href="" class="uk-button uk-button-text" target="_blank"><span uk-icon="more" class="uk-icon" style="margin-right: 5px"></span><span class="uk-text-middle">Read more</span></a>
-															</div>
+													</div>
+													<div class="uk-margin-small-top uk-text-left uk-grid-column-small" uk-grid>
+														<div class="uk-width-auto">
+															<!--<a href="" class="uk-button uk-button-text" target="_blank"><span uk-icon="more" class="uk-icon" style="margin-right: 5px"></span><span class="uk-text-middle">Read more</span></a>-->
 														</div>
 													</div>
+												</div>
 											</div>
-											<div><img data-src="./img/projects/XPlatform.gif" alt="" uk-img class="experience-image uk-width-medium uk-height-auto uk-visible@m"></div>
+											<div><img data-src="./img/projects/ZomNom.gif" alt="" uk-img class="experience-image uk-width-medium uk-height-auto uk-visible@m" height="169" width="300"></div>
 										</div>
 									</div>
 								</div>
 							</li>
+
 							<!--ZomNom-->
 							<li data-type="game" data-date="2018-12-26">
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
@@ -372,7 +374,7 @@
 									</div>
 								</div>
 							</li>
-							
+
 
 							<!--Humourous Overkill-->
 							<li data-type="game" data-date="2017-12-26">
