--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 													</div>
 												</div>
 											</div>
-											<div><img data-src="./img/projects/ZomNom.gif" alt="" uk-img class="experience-image uk-width-medium uk-height-auto uk-visible@m" height="169" width="300"></div>
+											<div><img data-src="./img/projects/XPlatform.gif" alt="" uk-img class="experience-image uk-width-medium uk-height-auto uk-visible@m" height="169" width="300"></div>
 										</div>
 									</div>
 								</div>
