--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 														<div class="uk-width-expand">
 															<h3 class="uk-text-bold uk-text-uppercase uk-heading-line">
 																<span class="uk-position-relative">
-																	<span>ZomNom</span>
+																	<span>Keep Running!</span>
 																	<span class="uk-text-middle" uk-icon="icon: unity2; ratio: 1.25" style="padding-bottom: 4px;"></span>
 																</span>
 															</h3>
