--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 													</div>
 												</div>
 											</div>
-											<div><img data-src="./img/projects/whatwapp/logo.png" alt="" uk-img class="experience-image uk-width-medium uk-height-auto uk-visible@m"></div>
+											<div><img data-src="" alt="" uk-img class="experience-image uk-width-medium uk-height-auto uk-visible@m"></div>
 										</div>
 									</div>
 								</div>
@@ -503,13 +503,13 @@
 
 														</ul>
 													</div>
-													<div><h4 class="uk-text-capitalize uk-text-italic">Quest System</h4></div>
+													<div><h4 class="uk-text-capitalize uk-text-italic">Developer</h4></div>
 													<div class="uk-margin-small-top">
 														Created a modular quest system for kill and gather quests, as well as an inventory system, gathering system. Quests can be accepted or be given automatically when the player moves to a designated zone.
 													</div>
 												</div>
 											</div>
-											<div><img data-src="" alt="" uk-img class="experience-image uk-width-medium uk-height-auto uk-visible@m"></div>
+											<div><img data-src="./img/projects/EasyQuest.gif" alt="" uk-img class="experience-image uk-width-medium uk-height-auto uk-visible@m"></div>
 										</div>
 									</div>
 								</div>
