testing if new category will just work

--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
 									<li uk-filter-control="filter: [data-type='game']; group: data-type"><a href="#">Game</a></li>
 									<li uk-filter-control="filter: [data-type='publication']; group: data-type"><a href="#">Publication</a></li>
 									<li uk-filter-control="filter: [data-type='education']; group: data-type"><a href="#">Education</a></li>
+									<li uk-filter-control="filter: [data-type='employment']; group: data-type"><a href="#">Employment</a></li>
 								</ul>
 							</div>
 							<div>
