--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 													</div>
 													<div><h4 class="uk-text-capitalize uk-text-italic">Game Developer</h4></div>
 													<div class="uk-margin-small-top" style="margin-right: 1px">
-														Keep Running is a 2D Endless Runner in which you attempt to get the highest score you possibly can. There are powerup's you can collect as well as coins which increase your score. 
+														Keep Running is a 2D Endless Runner in which you attempt to get the highest score you possibly can. There are powerup's you can collect as well as coins which increase your score.
 													</div>
 													<div class="uk-margin-small-top uk-text-left uk-grid-column-small" uk-grid>
 														<div class="uk-width-auto">
@@ -516,6 +516,41 @@
 								</div>
 							</li>
 
+							<!--RLDatix-->
+							<li data-type="employment" data-date="2019-12-26">
+								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
+									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
+										<div><span uk-icon="icon: school; ratio: 1.5"></span></div>
+										<div class="uk-margin-small-top uk-text-break"><h4>7th December 2020 - 6th October 2023</h4></div>
+										<span class="uk-padding-small-top uk-position-top-right-out" uk-icon="icon: circle; ratio: 0.7" style="z-index: 1; padding-top: 10px; padding-left: 9px;"></span>
+										<ul class="uk-hidden@s uk-iconnav uk-flex-right uk-margin-remove-left">
+											<li><a href="https://aie.edu.au" uk-icon="icon: link; ratio: 1.25" target="_blank"></a></li>
+										</ul>
+									</div>
+									<div class="uk-width-expand uk-child-width-1-1 uk-padding-large-bottom">
+										<div class="uk-grid-small uk-margin-remove-left" uk-grid>
+											<div class="uk-width-expand uk-padding-remove-left">
+												<div class="uk-width-expand uk-child-width-1-1 uk-grid-collapse uk-padding-remove-left" uk-grid>
+													<div class="uk-grid-collapse" uk-grid>
+														<div class="uk-width-expand">
+															<h3 class="uk-text-bold uk-text-uppercase uk-heading-line">
+																<span>RLDatix</span>
+															</h3>
+														</div>
+														<ul class="uk-visible@s uk-iconnav uk-width-auto uk-margin-remove-left uk-background-default uk-flex-middle">
+															<li><a href="https://aie.edu.au" uk-icon="icon: link; ratio: 1.25" target="_blank"></a></li>
+														</ul>
+													</div>
+													<div><h4 class="uk-text-capitalize uk-text-italic">Technical Consultant</h4></div>
+													<div class="uk-margin-small-top">
+														Was responsible for the resolution of work items using SQL, C#, JS, Powershell and HTML/CSS. Was also responsible for providing documementation on how these work items were resolved and for the enviroment health checks of our application suite.
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</li>
 
 							<!--AIE Education-->
 							<li data-type="education" data-date="2019-12-26">
