--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 							<li data-type="employment" data-date="2023-10-06">
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
-										<div><span uk-icon="icon: school; ratio: 1.5"></span></div>
+										<div><span uk-icon="icon: breifcase; ratio: 1.5"></span></div>
 										<div class="uk-margin-small-top uk-text-break"><h4>7th December 2020 - 6th October 2023</h4></div>
 										<span class="uk-padding-small-top uk-position-top-right-out" uk-icon="icon: circle; ratio: 0.7" style="z-index: 1; padding-top: 10px; padding-left: 9px;"></span>
 										<ul class="uk-hidden@s uk-iconnav uk-flex-right uk-margin-remove-left">
