--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
 										<div><span uk-icon="icon: breifcase; ratio: 1.5"></span></div>
-										<div class="uk-margin-small-top uk-text-break"><h4>7th December 2020 - 6th October 2023</h4></div>
+										<div class="uk-margin-small-top uk-text-break"><h4>December 2020 - October 2023</h4></div>
 										<span class="uk-padding-small-top uk-position-top-right-out" uk-icon="icon: circle; ratio: 0.7" style="z-index: 1; padding-top: 10px; padding-left: 9px;"></span>
 										<ul class="uk-hidden@s uk-iconnav uk-flex-right uk-margin-remove-left">
 											<li><a href="https://aie.edu.au" uk-icon="icon: link; ratio: 1.25" target="_blank"></a></li>
