--- a/index.html
+++ b/index.html
@@ -108,7 +108,11 @@
 								</div>
 								<div>
 									<span class="uk-margin-small-right" uk-icon="icon: html; ratio: 1.5"></span>
-									<span class="uk-text-middle">HTML</span>
+									<span class="uk-text-middle">HTML/CSS</span>
+								</div>
+								<div>
+									<span class="uk-margin-small-right" uk-icon="icon: powershell; ratio: 1.5"></span>
+									<span class="uk-text-middle">Powershell</span>
 								</div>
 							</div>
 						</div>
