removed resume and phone number

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 						<div class="uk-width-expand@s">
 							<h2 id="about" class="uk-heading-divider title-link"><a href="#about">About me</a></h2>
 							<p><span class="uk-text-primary uk-text-bold">Game Programmer</span> graduated with a bachelor degree in <span class="uk-text-primary uk-text-bold">Games and Virtual Worlds Programming</span>. Since graduating I have been <span class="uk-text-primary uk-text-bold">developing</span> games in both the <span class="uk-text-primary uk-text-bold">Unity</span> and <span class="uk-text-primary uk-text-bold">Unreal</span> game engines using  C#, C++ and Blueprints. I also have <span class="uk-text-primary uk-text-bold">JavaScript</span> and <span class="uk-text-primary uk-text-bold">SQL</span> experience due to my current employment.</p>
-							<div class="uk-text-large">
+							<!--<div class="uk-text-large">
 								<span class="uk-margin-small-right" uk-icon="icon: file-pdf; ratio: 2"></span><a class="uk-text-middle" href="./file/ZD_CV.pdf" target="_blank"><span>Download resume</span></a>
-							</div>
+							</div>-->
 						</div>
 						<div class="width-contacts">
 							<h2 id="contacts" class="uk-heading-divider title-link"><a href="#contacts">Contacts</a></h2>
@@ -73,9 +73,9 @@
 									<div class="">
 										Email: <a href="mailto:zackary.direen@hotmail.com" target="_blank"><span>zackary.direen@hotmail.com</span></a>
 									</div>
-									<div class="">
+									<!--<div class="">
 										Phone: <a href="tel:+61 480 415 418" target="_blank"><span>+61 480 415 418</span></a>
-									</div>
+									</div>-->
 									<div class="">
 										<span class="uk-margin-small-right" uk-icon="linkedin"></span><a class="uk-text-middle" href="https://www.linkedin.com/in/zackary-direen/" target="_blank"><span>/in/zackary-direen</span></a>
 									</div>
