added zomnom steam link

--- a/index.html
+++ b/index.html
@@ -357,10 +357,9 @@
 																</span>
 															</h3>
 														</div>
-														<!--<ul class="uk-visible@s uk-iconnav uk-width-auto uk-margin-remove-left uk-background-default uk-flex-middle">
-									<li><a href="https://play.google.com/store/apps/details?id=com.WhatWapp.BurracoOnline" uk-icon="icon: google-play; ratio: 1.25" target="_blank"></a></li>
-									<li><a href="https://apps.apple.com/it/app/burraco-italiano-la-sfida/id1019117289" uk-icon="icon: app-store; ratio: 1.25" target="_blank"></a></li>
-								</ul> -->
+														<ul class="uk-visible@s uk-iconnav uk-width-auto uk-margin-remove-left uk-background-default uk-flex-middle">
+															<li><a href="https://store.steampowered.com/app/1193070/Zom_Nom/" uk-icon="icon: steam; ratio: 1.25" target="_blank"></a></li>
+														</ul>
 													</div>
 													<div><h4 class="uk-text-capitalize uk-text-italic">Game Developer</h4></div>
 													<div class="uk-margin-small-top" style="margin-right: 1px">
