--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 								<ul class="uk-subnav uk-subnav-pill" uk-margin>
 									<li class="uk-active" uk-filter-control><a href="#">All</a></li>
 									<li uk-filter-control="filter: [data-type='game']; group: data-type"><a href="#">Game</a></li>
-									<li uk-filter-control="filter: [data-type='publication']; group: data-type"><a href="#">Publication</a></li>
+									<!--<li uk-filter-control="filter: [data-type='publication']; group: data-type"><a href="#">Publication</a></li>-->
 									<li uk-filter-control="filter: [data-type='education']; group: data-type"><a href="#">Education</a></li>
 									<li uk-filter-control="filter: [data-type='employment']; group: data-type"><a href="#">Employment</a></li>
 								</ul>
