--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 													</div>
 													<div class="uk-margin-small-top uk-text-left uk-grid-column-small" uk-grid>
 														<div class="uk-width-auto">
-															<!--<a href="" class="uk-button uk-button-text" target="_blank"><span uk-icon="more" class="uk-icon" style="margin-right: 5px"></span><span class="uk-text-middle">Read more</span></a>-->
+															<a href="./projects/zomnom.html" class="uk-button uk-button-text" target="_blank"><span uk-icon="more" class="uk-icon" style="margin-right: 5px"></span><span class="uk-text-middle">Read more</span></a>
 														</div>
 													</div>
 												</div>
