--- a/projects/zomnom.html
+++ b/projects/zomnom.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Matteo Graizzaro Portfolio | Canals Village</title>
+    <title>Zackary Direen Portfolio | ZomNom</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/uikit.min.css" />
@@ -15,7 +15,7 @@
         <div class="uk-padding-small-top uk-section-muted uk-margin-medium-bottom">
             <div class="uk-width-1-1 uk-width-3xlarge@s" style="padding: 0 15px;">
                 <header class="uk-padding-small-top uk-grid-small uk-grid-collapse@m uk-child-width-1-1" uk-grid>
-                    <h1>Matteo Graizzaro</h1>
+                    <h1>Zackary Direen</h1>
                     <h3 class="uk-text-large uk-text-light">Game Programmer</h3>
                 </header>
 
@@ -33,13 +33,11 @@
                                     <ul class="uk-subnav uk-subnav-pill uk-flex-center uk-text-center" uk-margin>
                                         <li><a href="whatwapp.html">Whatwapp<br><span class="uk-text-italic uk-text-capitalize">2021-Present</span></a></li>
                                         <li class="uk-active"><a href="village.html">Canals Village<br><span class="uk-text-italic uk-text-capitalize">2021-2023</span></a></li>
-                                        <li><a href="library.html">Whitches Library<br><span class="uk-text-italic uk-text-capitalize">2021</span></a></li>
-                                        <li><a href="solitaire.html">Solitaire<br><span class="uk-text-italic uk-text-capitalize">2021</span></a></li>
-                                        <li><a href="ploppem2.html">Ploppem 2<br><span class="uk-text-italic uk-text-capitalize">2021</span></a></li>
-                                        <li><a href="tunnel.html">Tunnel<br><span class="uk-text-italic uk-text-capitalize">2021</span></a></li>
-                                        <li><a href="ploppem.html">Ploppem<br><span class="uk-text-italic uk-text-capitalize">2020-2021</span></a></li>
-                                        <li><a href="nodib.html">Nodib<br><span class="uk-text-italic uk-text-capitalize">2020</span></a></li>
-                                        <li><a href="oath.html">Oath<br><span class="uk-text-italic uk-text-capitalize">2018-2019</span></a></li>
+                                        <li><a href="">Farmm<br><span class="uk-text-italic uk-text-capitalize">2023-Present</span></a></li>
+                                        <li><a href="">EasyQuest<br><span class="uk-text-italic uk-text-capitalize">2019-2020</span></a></li>
+                                        <li><a href="">Keep Running!<br><span class="uk-text-italic uk-text-capitalize">2019</span></a></li>
+                                        <li><a href="">XPlatform<br><span class="uk-text-italic uk-text-capitalize">2018</span></a></li>
+                                        <li><a href="">Humourous Overkill<br><span class="uk-text-italic uk-text-capitalize">2017</span></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -62,17 +60,17 @@
                         <li class="uk-nav-divider"></li>
                         <li><a href="#summary">Summary</a></li>
                         <li><a href="#introduction">Introduction</a></li>
-                        <li><a href="#begin">Let's begin!</a></li>
-                        <li><a href="#roof-generation">Roof generation</a></li>
-                        <li><a href="#decorations">Decorations</a></li>
+                        <li><a href="#involvement">Involvement</a></li>
+                        <li><a href="#release">Release</a></li>
+                        <li><a href="#ratings">Ratings</a></li>
                         <li><a href="#closing-thoughts">Closing thoughts</a></li>
                         <li class="uk-nav-divider"></li>
-                        <li>
+                        <!--<li>
                             <a href="https://www.artstation.com/artwork/zDbv04" target="_blank">
                                 <span uk-icon="artstation" class="uk-margin-small-right"></span>
                                 <span class="uk-text-middle">ArtStation</span>
                             </a>
-                        </li>
+                        </li>-->
                     </ul>
                 </div>
             </div>
@@ -81,16 +79,18 @@
         <main class="uk-position-relative uk-text-left">
             <section class="uk-section uk-padding-remove-vertical uk-margin-medium-bottom">
                 <div class="uk-container uk-width-1-1 uk-width-2xlarge@s">
-                    <div class="uk-background-cover uk-height-medium uk-border-rounded" style="background-image: url(../img/projects/village/logo-small.jpg);"></div>
+                    <div class="uk-background-cover uk-height-medium uk-border-rounded" style="background-image: url(../img/projects/village/zomnomlogo.png);"></div>
                 </div>
             </section>
             <section class="uk-hidden@l">
                 <div class="uk-padding-small-right uk-padding-small-left uk-flex-center uk-grid-column-small uk-margin-medium-top uk-grid-divider" style="font-size: 1.2rem;" uk-grid>
                     <div>
-                        <a href="https://www.artstation.com/artwork/zDbv04" target="_blank" class="uk-link uk-link-heading">
+                        <!--
+                            <a href="https://www.artstation.com/artwork/zDbv04" target="_blank" class="uk-link uk-link-heading">
                             <span uk-icon="icon: artstation; ratio: 1.5" class="uk-margin-small-right"></span>
                             <span class="uk-text-middle">ArtStation</span>
                         </a>
+                        -->
                     </div>
                 </div>
             </section>
@@ -99,21 +99,25 @@
                     <h2 id="summary" class="uk-text-center title-link uk-heading-divider"><a href="#summary">Summary</a></h2>
                     <div class="uk-child-width-1-1 uk-child-width-1-2@m" uk-grid="masonry: true;" style="margin-top: 30px;">
                         <div>
-                            <p>I helped the artist improve his workflow by adding tools developed using blueprints. I didn't notice many changes in the systems from my <a class="uk-link" href="library.html" target="_blank">previous</a> UE4 experience, probably because I didn't have to explore its depth too much. This experience has shown my growth and I was able to more comfortably assist the author's efforts in bringing to life the project.</p>
+                            <p>
+                                ZomNom is a thrilling 2.5D side-scrolling game that transports players into a unique world where they embark on a bizarre quest to become "President Barry." This captivating game was conceived as part of a second-year project for a game development course, providing students with the invaluable opportunity to gain hands-on experience collaborating with programmers, game designers, and artists â€“ a crucial skillset for future roles in the game development industry.
+
+                                In ZomNom, players step into the shoes of a zombie protagonist with an insatiable craving for brains. To achieve their presidential aspirations, they must explore an immersive and visually stunning game world, navigating through intricate levels filled with challenges and enemies. Along the way, players will need to engage in strategic combat, using their unique zombie abilities to devour brains and accumulate power.
+                            </p>
                         </div>
                         <div class="uk-child-width-1-1">
                             <h3 class="uk-heading-bullet uk-width-1-1"><span>Specifications</span></h3>
                             <ul class="uk-list uk-list-circle">
-                                <li>Helped developing blueprints</li>
-                                <li>Developed in Unreal Engine 5 Alpha</li>
-                                <li>3D Environment</li>
+                                <li>Helped develop the health system, the powerups, the spitballs and visual effects.</li>
+                                <li>Developed in Unity</li>
+                                <li>3D Environment with 2D movement</li>
                             </ul>
                         </div>
                         <div class="uk-child-width-1-1">
-                            <h3 class="uk-heading-bullet uk-width-1-1"><span>Project goals</span></h3>
+                            <h3 class="uk-heading-bullet uk-width-1-1"><span>Project Goals</span></h3>
                             <ul class="uk-list uk-list-circle">
-                                <li>Support the artist work by developing blueprints to speed up the environment's development</li>
-                                <li>Get in touch with the differences between UE4 and UE5</li>
+                                <li>To create a game that was fun and engaging to players </li>
+                                <li>Main gameplay loop to be around 30 minutes playtime.</li>
                             </ul>
                         </div>
                     </div>
@@ -125,8 +129,8 @@
                     <div class="uk-grid-small uk-child-width-1-1 uk-grid-row-medium" uk-grid>
                         <div>
                             <p>
-                                Hi, my name is Matteo Graizzaro, a mostly C# coder with some knowledge of other stuff. I'm currently employed as a <span class="uk-text-primary uk-text-bold">Junior Game Developer</span> in a mobile game company called <span class="uk-text-italic">Whatwapp</span>, and sometimes, after my daily shift, I like to help my brother, a 3D artist, with his Unreal Engine projects. I already gave him a little support for a previous project, developing blueprints involving <code>Splines</code>, <code>UI</code>, and more, but you can read about it in my other <a class="uk-link" href="library.html" target="_blank">breakdown</a>, and don't forget to go admire his  <span class="uk-text-danger">art piece</span> <a class="uk-link" href="https://www.artstation.com/artwork/zDbv04" target="_blank">art piece</a>.<br>
-                                This time things will be simpler, but no less challenging.
+
+                                Greetings, I'm Zackary Direen, a junior game developer with a passion for crafting immersive experiences, and I have hands-on experience in both Unity and Unreal Engine. My journey in game development has been marked by a dedicated pursuit of excellence and a deep appreciation for the creative and technical aspects of game design.
                             </p>
                         </div>
                     </div>
@@ -335,7 +339,7 @@
                             Icons by <a href="https://simpleicons.org/" target="_blank">Simple Icons</a> & <a href="https://neuicons.com/" target="_blank">Neu Icons</a>
                         </div>
                         <div class="uk-text-right@s">
-                            © 2021 by Graizzaro Matteo
+                            ï¿½ 2021 by Graizzaro Matteo
                         </div>
                     </div>
                 </div>
