--- a/projects/zomnom.html
+++ b/projects/zomnom.html
@@ -125,7 +125,7 @@
             </section>
             <section class="uk-section uk-section-xsmall">
                 <div class="uk-container uk-width-1-1 uk-width-3xlarge@s">
-                    <h2 id="introduction" class="uk-text-center title-link uk-heading-divider"><a href="#third-person-character">Introduction</a></h2>
+                    <h2 id="introduction" class="uk-text-center title-link uk-heading-divider"><a href="#introduction">Introduction</a></h2>
                     <div class="uk-grid-small uk-child-width-1-1 uk-grid-row-medium" uk-grid>
                         <div>
                             <p>
@@ -138,7 +138,7 @@
             </section>
             <section class="uk-section uk-section-xsmall">
                 <div class="uk-container uk-width-1-1 uk-width-3xlarge@s">
-                    <h2 id="begin" class="uk-text-center title-link uk-heading-divider"><a href="#begin">Let's begin!</a></h2>
+                    <h2 id="begin" class="uk-text-center title-link uk-heading-divider"><a href="#involvement">Involvement</a></h2>
                     <div class="uk-grid-small uk-child-width-1-1 uk-grid-row-medium" uk-grid>
                         <div>
                             <p>As I entered the project all the changes in the level were made manually by the artist, one being the substitution of the windows meshes to test different wall compositions. Therefore, as a first task, I developed a small tool that using a slider allows the artist to quickly switch between the different meshes loaded in an array.</p>
@@ -174,7 +174,7 @@
             </section>
             <section class="uk-section uk-section-xsmall">
                 <div class="uk-container uk-width-1-1 uk-width-3xlarge@s">
-                    <h2 id="roof-generation" class="uk-text-center title-link uk-heading-divider"><a href="#roof-generation">Roof generation</a></h2>
+                    <h2 id="roof-generation" class="uk-text-center title-link uk-heading-divider"><a href="#Release">Release</a></h2>
                     <div class="uk-grid-small uk-child-width-1-1 uk-grid-row-medium" uk-grid>
                         <div>
                             <p>
@@ -290,7 +290,7 @@
             </section>
             <section class="uk-section uk-section-xsmall">
                 <div class="uk-container uk-width-1-1 uk-width-3xlarge@s">
-                    <h2 id="decorations" class="uk-text-center title-link uk-heading-divider"><a href="#decorations">Decorations</a></h2>
+                    <h2 id="decorations" class="uk-text-center title-link uk-heading-divider"><a href="#ratings">Reviews</a></h2>
                     <div class="uk-grid-small uk-child-width-1-1 uk-grid-row-medium" uk-grid>
                         <div>
                             <p>During the project I also produced a couple of simpler and quicker blueprints.</p>
