--- a/projects/zomnom.html
+++ b/projects/zomnom.html
@@ -62,7 +62,7 @@
                         <li><a href="#introduction">Introduction</a></li>
                         <li><a href="#involvement">Involvement</a></li>
                         <li><a href="#release">Release</a></li>
-                        <li><a href="#ratings">Ratings</a></li>
+                        <li><a href="#ratings">Reviews</a></li>
                         <li><a href="#closing-thoughts">Closing thoughts</a></li>
                         <li class="uk-nav-divider"></li>
                         <!--<li>
@@ -174,7 +174,7 @@
             </section>
             <section class="uk-section uk-section-xsmall">
                 <div class="uk-container uk-width-1-1 uk-width-3xlarge@s">
-                    <h2 id="roof-generation" class="uk-text-center title-link uk-heading-divider"><a href="#Release">Release</a></h2>
+                    <h2 id="roof-generation" class="uk-text-center title-link uk-heading-divider"><a href="#release">Release</a></h2>
                     <div class="uk-grid-small uk-child-width-1-1 uk-grid-row-medium" uk-grid>
                         <div>
                             <p>
