--- a/projects/zomnom.html
+++ b/projects/zomnom.html
@@ -79,7 +79,7 @@
         <main class="uk-position-relative uk-text-left">
             <section class="uk-section uk-padding-remove-vertical uk-margin-medium-bottom">
                 <div class="uk-container uk-width-1-1 uk-width-2xlarge@s">
-                    <div class="uk-background-cover uk-height-medium uk-border-rounded" style="background-image: url(../img/projects/village/zomnomlogo.png);"></div>
+                    <div class="uk-background-cover uk-height-medium uk-border-rounded" style="background-image: url(../img/projects/zomnomlogo.png);"></div>
                 </div>
             </section>
             <section class="uk-hidden@l">
@@ -103,6 +103,8 @@
                                 ZomNom is a thrilling 2.5D side-scrolling game that transports players into a unique world where they embark on a bizarre quest to become "President Barry." This captivating game was conceived as part of a second-year project for a game development course, providing students with the invaluable opportunity to gain hands-on experience collaborating with programmers, game designers, and artists – a crucial skillset for future roles in the game development industry.
 
                                 In ZomNom, players step into the shoes of a zombie protagonist with an insatiable craving for brains. To achieve their presidential aspirations, they must explore an immersive and visually stunning game world, navigating through intricate levels filled with challenges and enemies. Along the way, players will need to engage in strategic combat, using their unique zombie abilities to devour brains and accumulate power.
+                                
+                                We had 6 months in order to create a game of our choice from scratch and using our own assets and at the end of our development time, we were to present our game to the rest of our year, as well as at an AIE event that was open to the public.  
                             </p>
                         </div>
                         <div class="uk-child-width-1-1">
