--- a/projects/zomnom.html
+++ b/projects/zomnom.html
@@ -79,7 +79,7 @@
         <main class="uk-position-relative uk-text-left">
             <section class="uk-section uk-padding-remove-vertical uk-margin-medium-bottom">
                 <div class="uk-container uk-width-1-1 uk-width-2xlarge@s">
-                    <div class="uk-background-cover uk-height-medium uk-border-rounded" style="background-image: url(../img/projects/zomnomlogo.png);"></div>
+                    <div class="uk-background-cover uk-height-large uk-border-rounded" style="background-image: url(../img/projects/zomnomlogo.png);"></div>
                 </div>
             </section>
             <section class="uk-hidden@l">
