--- a/index.html
+++ b/index.html
@@ -273,7 +273,9 @@
 													</div>
 													<div class="uk-margin-small-top uk-text-left uk-grid-column-small" uk-grid>
 														<div class="uk-width-auto">
-															<a href="projects/whatwapp.html" class="uk-button uk-button-text" target="_blank"><span uk-icon="more" class="uk-icon" style="margin-right: 5px"></span><span class="uk-text-middle">Read more</span></a>
+															<!-- Add read more button when project page is done. 
+																<a href="projects/whatwapp.html" class="uk-button uk-button-text" target="_blank"><span uk-icon="more" class="uk-icon" style="margin-right: 5px"></span><span class="uk-text-middle">Read more</span></a>
+															-->
 														</div>
 													</div>
 												</div>
@@ -368,7 +370,9 @@
 													</div>
 													<div class="uk-margin-small-top uk-text-left uk-grid-column-small" uk-grid>
 														<div class="uk-width-auto">
+															<!-- add when project page is done.
 															<a href="./projects/zomnom.html" class="uk-button uk-button-text" target="_blank"><span uk-icon="more" class="uk-icon" style="margin-right: 5px"></span><span class="uk-text-middle">Read more</span></a>
+																-->
 														</div>
 													</div>
 												</div>
