--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 													</div>
 												</div>
 											</div>
-											<div><img data-src="" alt="" uk-img class="experience-image uk-width-medium uk-height-auto uk-visible@m"></div>
+											<div><img data-src="./img/projects/CounterStriker.gif" alt="" uk-img class="experience-image uk-width-medium uk-height-auto uk-visible@m"></div>
 										</div>
 									</div>
 								</div>
