remove navbar for now

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<hr class="uk-width-large uk-width-1-1@m uk-align-center uk-margin-remove-bottom">
 				</div>
 				
-				<nav class="uk-navbar-container" uk-sticky="show-on-up: true; animation: uk-animation-slide-top; cls-active: uk-box-shadow-small; cls-inactive: uk-navbar-transparent;" uk-navbar>
+				<!--<nav class="uk-navbar-container" uk-sticky="show-on-up: true; animation: uk-animation-slide-top; cls-active: uk-box-shadow-small; cls-inactive: uk-navbar-transparent;" uk-navbar>
 					<div class="uk-navbar-center">
 						<ul class="uk-navbar-nav uk-child-width-1-2">
 							<li class="uk-padding-small"><a href="../">Home</a></li>
@@ -41,9 +41,9 @@
 								<a>Projects</a>
 								<div class="uk-navbar-dropdown uk-text-left" uk-drop="boundary: !nav; boundary-align: true; pos: bottom-justify; offset: 0">
 									<div class="uk-navbar-dropdown-grid uk-child-width-expand uk-margin-remove-left" uk-grid>
-										<ul class="uk-subnav uk-subnav-pill uk-flex-center uk-text-center" uk-margin>
+										<ul class="uk-subnav uk-subnav-pill uk-flex-center uk-text-center" uk-margin>-->
 									   		<!--<li><a href="./projects/whatwapp.html">Whatwapp<br><span class="uk-text-italic uk-text-capitalize">2021-Present</span></a></li>-->
-											<li><a href="">Farmmm<br><span class="uk-text-italic uk-text-capitalize">2023-Present</span></a></li>
+											<!--<li><a href="">Farmmm<br><span class="uk-text-italic uk-text-capitalize">2023-Present</span></a></li>
 											<li><a href="">EasyQuest<br><span class="uk-text-italic uk-text-capitalize">2019-2020</span></a></li>
 											<li><a href="">ZomNom<br><span class="uk-text-italic uk-text-capitalize">2018-2019</span></a></li>
 											<li><a href="">Humourous Overkill<br><span class="uk-text-italic uk-text-capitalize">2017-2018</span></a></li> 
@@ -53,7 +53,7 @@
 							</li>
 						</ul>
 					</div>
-				</nav>
+				</nav>-->
 			</div>
 				
 			<main class="uk-width-1-1 uk-width-3xlarge@s uk-text-left uk-grid-large uk-child-width-1-1" uk-grid>
