Added Opentext and modified RLDatix.

--- a/index.html
+++ b/index.html
@@ -578,12 +578,49 @@
 								</div>
 							</li>
 
-							<!--RLDatix-->
-							<li data-type="employment" data-date="2023-10-06">
+							<!--OpenText-->
+							<li data-type="employment" data-date="2023-10-16">
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
 										<div><span uk-icon="icon: breifcase; ratio: 1.5"></span></div>
-										<div class="uk-margin-small-top uk-text-break"><h4>December 2020 - October 2023</h4></div>
+										<div class="uk-margin-small-top uk-text-break"><h4>October 2023 - November 2023</h4></div>
+										<span class="uk-padding-small-top uk-position-top-right-out" uk-icon="icon: circle; ratio: 0.7" style="z-index: 1; padding-top: 10px; padding-left: 9px;"></span>
+										<ul class="uk-hidden@s uk-iconnav uk-flex-right uk-margin-remove-left">
+											<li><a href="https://aie.edu.au" uk-icon="icon: link; ratio: 1.25" target="_blank"></a></li>
+										</ul>
+									</div>
+									<div class="uk-width-expand uk-child-width-1-1 uk-padding-large-bottom">
+										<div class="uk-grid-small uk-margin-remove-left" uk-grid>
+											<div class="uk-width-expand uk-padding-remove-left">
+												<div class="uk-width-expand uk-child-width-1-1 uk-grid-collapse uk-padding-remove-left" uk-grid>
+													<div class="uk-grid-collapse" uk-grid>
+														<div class="uk-width-expand">
+															<h3 class="uk-text-bold uk-text-uppercase uk-heading-line">
+																<span>RLDatix</span>
+															</h3>
+														</div>
+														<ul class="uk-visible@s uk-iconnav uk-width-auto uk-margin-remove-left uk-background-default uk-flex-middle">
+														</ul>
+													</div>
+													<div><h4 class="uk-text-capitalize uk-text-italic">Technical Consultant</h4></div>
+													<div class="uk-margin-small-top">
+														Was responsible for the timely resolution of service requests within SLA's, as well as preforming enviromental health checks on application systems, as well as assisting personnel directly with inquiries and questions. 
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</li>
+
+
+
+							<!--RLDatix-->
+							<li data-type="employment" data-date="2023-11-04">
+								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
+									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
+										<div><span uk-icon="icon: breifcase; ratio: 1.5"></span></div>
+										<div class="uk-margin-small-top uk-text-break"><h4>December 2020 - October 2023, November 2023-Present</h4></div>
 										<span class="uk-padding-small-top uk-position-top-right-out" uk-icon="icon: circle; ratio: 0.7" style="z-index: 1; padding-top: 10px; padding-left: 9px;"></span>
 										<ul class="uk-hidden@s uk-iconnav uk-flex-right uk-margin-remove-left">
 											<li><a href="https://aie.edu.au" uk-icon="icon: link; ratio: 1.25" target="_blank"></a></li>
