--- a/index.html
+++ b/index.html
@@ -596,13 +596,13 @@
 													<div class="uk-grid-collapse" uk-grid>
 														<div class="uk-width-expand">
 															<h3 class="uk-text-bold uk-text-uppercase uk-heading-line">
-																<span>RLDatix</span>
+																<span>OpenText</span>
 															</h3>
 														</div>
 														<ul class="uk-visible@s uk-iconnav uk-width-auto uk-margin-remove-left uk-background-default uk-flex-middle">
 														</ul>
 													</div>
-													<div><h4 class="uk-text-capitalize uk-text-italic">Technical Consultant</h4></div>
+													<div><h4 class="uk-text-capitalize uk-text-italic">ERDMS Technical Consultant</h4></div>
 													<div class="uk-margin-small-top">
 														Was responsible for the timely resolution of service requests within SLA's, as well as preforming enviromental health checks on application systems, as well as assisting personnel directly with inquiries and questions. 
 													</div>
