--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
 										<div><span uk-icon="icon: windows; ratio: 1.5"></span></div>
-										<div class="uk-margin-small-top uk-text-break"><h4>August 2023 - Present</h4></div>
+										<div class="uk-margin-small-top uk-text-break"><h4>August 2023 - Feburary 2024</h4></div>
 										<span class="uk-padding-small-top uk-position-top-right-out" uk-icon="icon: circle; ratio: 0.7" style="z-index: 1; padding-top: 10px; padding-left: 9px;"></span>
 										<ul class="uk-hidden@s uk-iconnav uk-flex-right uk-margin-remove-left">
 											<li><a href="" uk-icon="icon: ; ratio: 1.25" target="_blank"></a></li>
@@ -310,7 +310,7 @@
 														<div class="uk-width-expand">
 															<h3 class="uk-text-bold uk-text-uppercase uk-heading-line">
 																<span class="uk-position-relative">
-																	<span>Farmm</span>
+																	<span>Farmm Game</span>
 																	<span class="uk-text-middle" uk-icon="icon: unity2; ratio: 1.25" style="padding-bottom: 4px;"></span>
 																</span>
 															</h3>
@@ -322,7 +322,8 @@
 													</div>
 													<div><h4 class="uk-text-capitalize uk-text-italic">Game Developer</h4></div>
 													<div class="uk-margin-small-top">
-														Taking part in the creation of a farming game in which you breed creatures in order to make more creatures of different types and colours.
+														Taking part in the creation of a farming game in which creatures reproduce in order to make more creatures of different body types and colours. Colours are based off of primary and secondary colours. 
+														Downloadable version of the game coming soon!
 													</div>
 													<div class="uk-margin-small-top uk-text-left uk-grid-column-small" uk-grid>
 														<div class="uk-width-auto">
